# dfxml

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.disabled  LICENSE.md  Makefile  README.md  README.txt  dfxml_schema_commit.txt
.github/workflows/: continuous-integration-pip.yml
demos/: 3884955.html  demo_spark.py  index.js  jquery-ui.min.js  jquery.min.js  process_list_javascript.html  search.html  vmstats.py  vmstats_decode.html  vmstats_decode.py
demos/spark/: demo_spark.py
demos/vmstats/: .gitignore  Makefile  README.md  TTD.md  annotate.py  emr_graph.py  emr_launch.py  emr_stats.py  latex_tools.py  vm_collect.py  vmstats.py  vmstats_decode.py  vmstats_json.html
dtd/: dfxml.dtd
etc/: install_autotools.sh
python/: ChangeLog  Extractor.py  Makefile  Makefile.am  Objects.py  README.md  README.txt  TCPFlowObjects.py  _pick_pythons.sh  allocation_counter.py  break_out_diffs_by_anno.py  cat_fileobjects.py  cat_partitions.py  corpus_sync.py  dedup.py  deidentify_xml.py  demo_mac_timeline_iter.py  demo_mac_timeline_objects.py  dfxinfo.py  dfxml.py  dfxml_gen.py  dfxml_html.py  dfxml_tool.py  dfxml_writer.py  exp_slack.py  fiwalk.py  hash_sectors.py  iblkfind.py  icarvingtruth.py  idifference.py  idifference2.py  iexport.py  iexport_test.py  iextract.py  igrep.py  ihistogram.py  imap.py  imicrosoft_redact.py  iredact-config.txt  iredact.py  (+21 more)
python/demos/: demo_mac_timeline.py  demo_mac_timeline_iter.py  demo_mac_timeline_objects.py  demo_piecewise.py  demo_plot_times.py  demo_readtimes.py  demo_registry_timeline.py  demo_sizes.py
python/dfxml/: __init__.py  conftest.py  dfxml_html.py  fiwalk.py  objects.py  objects_test.py  writer.py
python/dfxml/tests/: .gitignore  ByteRun_fill_test.py  ByteRun_test.py  ByteRuns_test.py  CellObject_test.py  DFXMLObject_program_test.py  DiskImageObject_test.py  FileObject_allocation_test.py  FileObject_byte_run_facets_test.py  FileObject_externals_test.py  FileObject_from_stat_test.py  FileObject_test.py  LibraryObject_read_test.py  LibraryObject_write_test.py  Makefile  Makefile_test.py  PartitionObject_test.py  PartitionSystemObject_test.py  RegXMLObject_test.py  VolumeObject_externals_test.py  VolumeObject_hash_test.py  VolumeObject_test.py  cat_patterns_test.sh  diff_file_ignore_sample_dfxml_test.py  diff_file_ignore_test.py  differential_dfxml_test.sh  diffing_ByteRuns_test.py  diffing_CellObject_test.py  diffing_FileObject_test.py  diffing_HiveObject_test.py  diffing_TimestampObject_test.py  diffing_VolumeObject_test.py  error_test.py  libtest.py  objects_test.py  paths.sh  storage_layers_test.py  test_TCPFlowObjects.py  test_differential_dfxml.sh  test_walk_ignore.sh  (+5 more)
python/dfxmlp/: .coverage  objects.py
python/dfxmlp/tests/: .coverage  ByteRun_test.py  ByteRuns_test.py  CellObject_test.py  DFXMLObject_program_test.py  DiskImageObject_test.py  FileObject_allocation_test.py  FileObject_byte_run_facets_test.py  FileObject_externals_test.py  FileObject_from_stat_test.py  FileObject_test.py  LibraryObject_read_test.py  LibraryObject_write_test.py  Makefile  PartitionObject_test.py  PartitionSystemObject_test.py  RegXMLObject_test.py  VolumeObject_externals_test.py  VolumeObject_hash_test.py  VolumeObject_test.py  diff_file_ignore_sample_dfxml_test.py  diff_file_ignore_test.py  diffing_ByteRuns_test.py  diffing_CellObject_test.py  diffing_FileObject_test.py  diffing_HiveObject_test.py  diffing_TimestampObject_test.py  diffing_VolumeObject_test.py  error_test.py  libtest.py  objects_test.py  storage_layers_test.py  verify_differential_dfxml_01_test.py  verify_differential_dfxml_23_test.py  verify_walk_ignore_genprops_test.py  verify_walk_ignore_nohash_test.py
python/test_Objects/: Makefile  Objects.py  dfxml.py  diff_file_ignore_sample_dfxml.py  test_ByteRun.py  test_ByteRun_fill.py  test_ByteRuns.py  test_CellObject.py  test_DFXMLObject_program.py  test_FileObject_allocation.py  test_FileObject_byte_run_facets.py  test_FileObject_diffing.py  test_FileObject_externals.py  test_FileObject_from_stat.py  test_LibraryObject_read.py  test_LibraryObject_write.py  test_RegXMLObject.py  test_TCPFlowObjects.py  test_VolumeObject_diffing.py  test_VolumeObject_externals.py  test_VolumeObject_hash.py  test_cat_partitions.sh  test_diff_file_ignore.py  test_differential_dfxml.sh  test_diffing_ByteRuns.py  test_diffing_CellObject.py  test_diffing_FileObject.py  test_diffing_HiveObject.py  test_diffing_TimestampObject.py  test_diffing_VolumeObject.py  test_storage_layers.py  test_walk_ignore.sh  try_verifying_image_sha1s.py  verify_differential_dfxml.py  verify_differential_dfxml_01.py  verify_differential_dfxml_23.py  verify_walk_ignore_genprops.py  verify_walk_ignore_nohash.py
python/tests/: _pick_pythons.sh  dfxml_test.py  iexport_test.py  paths.sh  test_dfxml.sh  test_dfxml_tool.sh  test_idifference.py  test_idifference_to_dfxml.sh  test_mac_timelines.sh  test_regxml.sh
python/tests/test_venv/: .gitignore  Makefile  simple_read_dfxml.py
samples/: Makefile  difference_test_0.xml  difference_test_1.xml  difference_test_2.xml  difference_test_3.xml  fileobjectexample.xml  simple.xml
src/: .dfxml_reader.cpp.swp  .dfxml_writer.cpp.swp  .gitignore  .hash_t.h.swp  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.defs  README  README.md  beregex.cpp  beregex.h  bootstrap  bootstrap.sh  bootstrap.sh.old  configure.ac  cppmutex.h  cpu_info.c  cpu_stat.c  cpu_stat.cpp  cpuid.cpp  cpuid.h  depcomp  dfxml.cpp  dfxml.h  dfxml_configure.m4  dfxml_demo.cpp  dfxml_generator.cpp  dfxml_generator.h  dfxml_reader.cpp  dfxml_reader.h  dfxml_writer.cpp  dfxml_writer.h  hash_t.h  iblkfind.cpp  md5.h  requirements-ubuntu.txt  testapp.cpp  testapp_catch2.cpp  (+5 more)
src/m4/: ax_cxx_compile_stdcxx_11.m4
src/tests/: .gitignore  Makefile  Makefile.am  Makefile.in  cester.h  cester_configure.m4  testapp.cpp
